[CSS Positioning] [fixed] overlap

--- a/sandbox/html_css/CSS_Positioning/fixed/styles/main.css
+++ b/sandbox/html_css/CSS_Positioning/fixed/styles/main.css
@@ -19,6 +19,7 @@ em {
 
 .blueBox {
     background: #627da0;
+    position: fixed
 }
 
 .greenBox {
